fixing display alignment for game-results session

--- a/assets/style.css
+++ b/assets/style.css
@@ -41,11 +41,13 @@ body {
     color: #dad7d7;
     letter-spacing: 1px;
     font-size: .8rem;
+    overflow: hidden;
 }
 
 .container {
-    max-width: 760px;
-    margin: auto;
+    max-width: 600px;
+    margin: 20px auto;
+    height: 100vh;
 }
 
 /* header */
@@ -56,10 +58,11 @@ body {
     border: 3px solid var(--headerOutline);
     padding: 15px;
     border-radius: 5px;
+    max-width: 600px;
 }
 
 .header > img {
-    width: 40%;
+    width: 5.5rem;
 }
 
 .score {
@@ -89,8 +92,9 @@ body {
     grid-template-areas: 
         'paper scissors'
         'rock rock';
-    height: 20rem;
+    height: 17rem;
     position: relative;
+    margin-top: 3.2rem;
 }
 
 .game::before {
@@ -98,7 +102,7 @@ body {
     width: 100%;
     height: 100%;
     position: absolute;
-    top: 5rem;
+    top: 3rem;
     display: flex;
     justify-content: center;
     z-index: -1;
@@ -135,9 +139,20 @@ body {
                 inset 0px 3px 0px 1px hsl(0deg 0% 87%);
 }
 
+.choice-btn.winner {
+    box-shadow: 0px 0px 0px 15px hsl(349deg 71% 52%), 
+                0px 5px 0px 15px hsl(349deg 70% 40%), 
+                0px 5px 0px 15px hsl(349deg 70% 40%), 
+                0px 5px 0px 35px hsl(0deg 0% 24% / 50%), 
+                0px 5px 0px 75px hsl(0deg 0% 24% / 28%), 
+                0px 5px 0px 110px hsl(0deg 0% 24% / 26%),
+                inset 1px 4px 0px 1px hsl(0deg 0% 87%);
+    z-index: -2;
+}
+
 .choice {
-    width: 3rem;
-    height: 3rem;
+    width: 3.5rem;
+    height: 3.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -148,7 +163,7 @@ body {
 
 
 .game-results {
-    display: grid;
+    display: none;
     grid-template-columns: repeat(2, 1fr);
     justify-items: center;
     grid-template-areas: 
@@ -157,6 +172,7 @@ body {
         'btn btn';
     white-space: nowrap;
     padding-top: 5rem;
+    margin-top: 2.7rem;
 }
 
 .game-results p {
@@ -175,10 +191,10 @@ body {
     align-items: center;
 }
 
-.player-results {
+#player-results {
     grid-area: results;
     font-size: 2.5rem;
-    margin-top: 2.5rem;
+    margin-top: 5rem;
 }
 
 .play-btn {
